# learning_nlp_agent

./: README.md  app.py  prompt.txt  pyproject.toml  tools.py
data/: students.json  tools.json
