[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-examiner-agent"
version = "0.1.0"
description = "AI-powered NLP exam system using Streamlit and OpenAI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["nlp", "exam", "ai", "streamlit", "openai", "education"]

dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = []

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
